<resources>
    <string name="app_name">DiplomAppV2.0</string>
    <string name="item">Элемент</string>
    <string name="action_registr">Зарегистрироваться</string>
    <string name="action_getpass">Забыли пароль?</string>
    <string name="action_login">Войти в аккаунт</string>
    <string name="email">Почта: </string>
    <string name="password">Пароль: </string>
    <string name="app_nick">RSUE Work Searcher</string>
    <string name="password_enter">Введите пароль</string>
    <string name="password_enter_redo">Повторите пароль</string>
    <string name="fname">Имя</string>
    <string name="lname">Фамилия</string>
    <string name="mname">Отчество</string>
    <string name="phone">Телефон: </string>
    <string name="document_resumes">Резюме</string>
    <string name="document_vacancys">Вакансии</string>
    <string name="name_theme_chat">"Тема: "</string>
    <string name="update">Обновить</string>
    <string name="delete">Удалить</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отменить</string>
    <string name="go_to_main">Вернуться на главную страницу</string>
    <string name="animated_open_item">Открыто</string>
    <string name="unanimated_item">Посмотреть полностью</string>
    <string name="document_new">Новые</string>
    <string name="hot_vacancy">Под указанные вами навыки</string>
    <string name="most_viewed">Часто просматриваемые</string>
    <string name="part_time_text">На неполный рабочий день</string>
    <string name="swipe_left_for_register">Проведите пальцем по экрану в право чтобы зарегистрироваться</string>
    <string name="document_title_label">Наименование</string>
    <string name="document_contact_info_label">Контактная информация</string>
    <string name="document_extra_info_label">Дополнительные данные по документу</string>
    <string name="document_salary_label">Заработная плата: </string>
    <string name="document_title_hint">Введите название.</string>
    <string name="document_contact_info_hint">Введите контактные данные!</string>
    <string name="document_extra_info_hint">Дополнительная информация</string>
    <string name="document_salary_hint">Предполагаемая заработная плата.</string>
    <string name="userFIO">ФИО пользователя: </string>
    <string name="salary_start">Зарплата</string>
    <string name="start"> от </string>
    <string name="end"> до </string>
    <string name="animated_hide_item">Карта скрывающая часть данных</string>
    <string name="dateText">Дата добавления: </string>
    <string name="experienceText">Опыт работы: </string>
    <string name="makeresp">Откликнуться</string>
    <string name="addtolist">Добавить в раздел…</string>
    <string name="citys_text">Город/города в которых актуальна вакансия:</string>
    <string name="join_as_guest">Войти как гость</string>
    <string name="knowledgeText">"Навыки "</string>
    <string name="important_knowledge">Необходимые навыки: </string>
    <string name="plaseHolderText">Lorem ipsum dolor sit amet, consectetur adipiscing e</string>
    <string name="positive_specialization">Подходящие специальности: </string>
    <string name="positive_experience">Необходимый опыт работы: </string>
    <string name="name">"Название: "</string>
    <string name="education">Образование</string>
    <string name="name_of_spec">Название специальности:</string>
    <string name="placeName">Место получения:</string>
    <string name="status">Статус: </string>
    <string name="action_settings">Настройки</string>
    <string name="action_logout">Выйти из аккаунта</string>
    <string name="action_personal_space">Личный кабинет</string>
    <string name="specialization">Специальности</string>
    <string name="experience">Опыт работы</string>
    <string name="desc">"Описание: "</string>
    <string name="role">"Должность: "</string>
    <string name="your_documents">"Ваши документы"</string>
    <string name="response">Архив</string>
    <string name="add_document">Добавить новый документ</string>
    <string name="add_specialization">добавить специальность пользователя</string>
    <string name="add_experience">добавить опыт работы</string>
    <string name="add_folder">добавить новый подраздел</string>
    <string name="add_specialization_text">Выберите специальность</string>
    <string name="chose_doc">Выбрать подтверждающий документ</string>
    <string name="file_name">Назвение файла</string>
    <string name="hintFileName">Введите название файла</string>
    <string name="add_file_question">Прикрепить подтверждающий файл?</string>
    <string name="add_education_text">Выберите место получения образования</string>
    <string name="chosed_file">Прикрепленный документ</string>
    <string name="save">Сохранить</string>
    <string name="add_spec_title">Добавление данных по специальности</string>
    <string name="forgot_a_file">Вы не выбрали файл</string>
    <string name="dismis_connection">Не удалось получить данные с сервера, повторите попытку позже!</string>
    <string name="confirm_text">Вы уверены что хотите удалить выбранный элемент?</string>
    <string name="confirm">Подтвердить</string>
    <string name="filtration_hint_text"><i>Фильтр</i></string>
    <string name="filtration_documents_text">Фильтры</string>
    <string name="warning_confirm_text">* После подтверждения данное действие не обратимо</string>
    <string name="chose_items_in_lists">"*Выберите элементы в раскрывающихся списках (если нужно используйте строку поиска для фильтрации результатов) "</string>
    <string name="addDataTitle">Название</string>
    <string name="title">Название документа</string>
    <string name="add_start_salary">Введите минимальную з/п</string>
    <string name="add_end_salary_employee">Введите желаемую з/п</string>
    <string name="add_end_salary_employer">Введите максимальную з/п</string>
    <string name="add_extra_info">Введите дополнительную информацию</string>
    <string name="salary">Заработная плата</string>
    <string name="salary_check">Ввести данные по минимальной заработной плате?</string>
    <string name="end_salary_employee">Желаемая з/п</string>
    <string name="start_salary">Минимальная з/п</string>
    <string name="chosen_know">Выбранные навыки*</string>
    <string name="available_know">Доступные навыки*</string>
    <string name="chose_know_type">Выберите тип компетенции</string>
    <string name="edit_document">Добавление данных по документу</string>
    <string name="edit_comment">Изменение контента сообщения</string>
    <string name="chose_spec">Выберите специальности на которые ориентировано резюме</string>
    <string name="chose_exp">Выберите опыт, который вы хотели бы продемонстрировать в резюме</string>
    <string name="add_spec_to_doc">Выбрать специальности по документу</string>
    <string name="not_chosed">Необходимо выбрать хотябы один элемент</string>
    <string name="so_many_item_7">Число выбранных элементов не может быть больше 7</string>
    <string name="add_exp_to_doc">Выбрать  опыт работы для прикрепления</string>
    <string name="not_at_all">Необходимо заполнить все поля со звездочками</string>
    <string name="not_at_all_serv">Документ добавлен не полностью!</string>
    <string name="important">*</string>
    <string name="add_exp_title">Добавление опыта работы</string>
    <string name="add_experience_text">Выберите период работы из выпадающего списка</string>
    <string name="experience_desc">Описание опыта работы:</string>
    <string name="chose_another_file">Изменить данные по прикрепленному файлу?</string>
    <string name="err_empty_name">Название не может быть короче 3х символов!</string>
    <string name="err_empty_content">Сообщение не может быть короче 2-х символа!</string>
    <string name="err_role_not_chosen">Необходимо указать по какой специальносте был получен опыт!</string>
    <string name="server_not_avilable">Сервер не доступен, вы работаете в автономном режиме</string>
    <string name="success">Успешно!</string>
    <string name="hasNoAccessToDownload">Неподтвержденные пользователи не могут скачивать файлы других пользователей!</string>
    <string name="resetPref">Сбросить настройки</string>
    <string name="archive_name_enter">Введите название архива</string>
    <string name="add_archive_text">Добавление нового подраздела</string>
    <string name="no_connection">Не удалось организовать устойчивое соединение с сервером, повторите попытку позднее!</string>
    <string name="no_connection_not_saving">Отсутствует подключение к интернету, данные о работе с приложением сейчас не сохраняются!</string>
    <string name="err_copy_name">Чтобы изменить название архива, оно должно отличаться от старого!</string>
    <string name="user_level">Прогресс до следующего уровня</string>
    <string name="enter_message">Введите сообщение</string>
    <string name="msg_token_fmt">Токен fb push: </string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="date_not_chosen">Не выбран(-а)</string>
    <string name="start_date">Начальная дата для анализа</string>
    <string name="end_date">Конечная дата для анализа</string>
    <string name="analitic_start_info_text">Выберите область и тип компетенции (специальность или навык) по выбранной области, по которой и будет производиться анализ</string>
    <string name="chose_data_interval">Выбрать конкретные временные рамки для анализа выбранного скила?</string>
    <string name="ask_for_analitic">Запросить статистику</string>
    <string name="chose_skill_know">Выбрать определенный навык для анализа?</string>
    <string name="chose_skill_spec">Выбрать определенную специальность для анализа?</string>
    <string name="hide_parameters">Свернуть параметры</string>
    <string name="choseAnaliticType">Выберите тип анализа (напривер по годам или месяцам)</string>
    <string name="analiticExtraWarnInfo">* При желании вы также можете выбрать конкретную компетенцию и конкретные веременные рамки для её анализа</string>
    <string name="chose_know">Выберите навык/специальность</string>
    <string name="user_analitic">Аналитика по пользователю</string>
    <string name="all_analitic">Общая аналитика</string>
    <string name="userDocAnalysis">Анализ данных по документам пользователя</string>
    <string name="userDocStatistic">Статистические данные по документу: </string>
    <string name="userSkillAnalysis">Анализ данных по компетенциям пользователя</string>
    <string name="chose_skill_type">Выберите класс, анализируемых компетенций</string>
    <string name="add_response">Оставить отклик</string>
    <string name="add_favorite">Добавить в избранное</string>
    <string name="hide_item">Скрыть выбранный элемент</string>
    <string name="add_to_custom_archive">Добавить в архив пользователя</string>
    <string name="chose_user_archive">Выберите архивы в которые вы хотите добавить элемент</string>
    <string name="numOfView">Количество показов</string>
    <string name="numOfResp">Количество откликов на документ</string>
    <string name="numOfDismiss">Раз сокрыто пользователями</string>
    <string name="line_view_analitic_description">Аналитика востребованности определенных навыков или специальностей за определенный промежуток времени</string>
    <string name="bar_analytic_description">Аналииз эффективности добавления определенных навыков и специальностей в свое резюме или вакансию</string>
    <string name="city_text">Город пользователя, разместившего резюме: </string>
    <string name="skillAnalysis">График востребованности выбранной компетенции или группы компетенций</string>
    <string name="skillAnalysisMonth">График востребованности выбранной компетенции или группы компетенций по месяцам</string>
    <string name="application_language_text">Язык приложения</string>
    <string name="app_theme">Оформление (тема) приложения</string>
    <string name="apply">Применить</string>
</resources>