<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:transitionName="@string/animated_open_item">
        <TextView
            android:id="@+id/document_author_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/document_title_label"
            style="?android:listSeparatorTextViewStyle"
            />
        <EditText android:id="@+id/document_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/document_title_hint"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/document_contact_info_label"
            style="?android:listSeparatorTextViewStyle"
            />
        <EditText android:id="@+id/document_contact_info"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/document_contact_info_hint"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/document_extra_info_label"
            style="?android:listSeparatorTextViewStyle"
            />
        <EditText android:id="@+id/document_extra_info"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/document_extra_info_hint"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/document_salary_label"
            style="?android:listSeparatorTextViewStyle"
            />

        <EditText
            android:id="@+id/document_salary"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:hint="@string/document_salary_hint" />
        <Button android:id="@+id/document_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <Button
                android:id="@+id/update_button"
                android:text="@string/update"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/delete_button"
                android:background="@drawable/btn_header"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/delete_button"
                android:text="@string/delete"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/btn_header"
                app:layout_constraintEnd_toStartOf="@+id/update_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
            android:id="@+id/go_on_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_header"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:text="@string/go_to_main" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>