<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/linearLayoutDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_text"
            android:padding="5dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:paddingBottom="3dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warning_confirm_text"
            android:padding="5dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:paddingBottom="3dp"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:textColor="?colorPrimaryUltraDark"
                app:backgroundTint="@null"
                android:textSize="16sp"
                android:text="@string/confirm"
                android:background="@drawable/btn_header"
                android:drawableEnd="@drawable/confirm_svg"/>
            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:padding="15dp"
                app:backgroundTint="@null"
                android:textColor="?colorPrimaryUltraDark"
                android:text="@string/cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@drawable/btn_header"
                android:drawableEnd="@drawable/remove_pressed_svg"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>